# where-ps5

./: README.md  pyproject.toml
whereps5/: __init__.py  __main__.py  amazon.py  bestbuy.py  target.py
